--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -64,7 +64,8 @@ jobs:
   sonarcloud:
     name: SonarCloud
     runs-on: ubuntu-latest
-    
+    needs: 
+      - build
     steps:
       - name: Git Checkout
         uses: actions/checkout@v2
